--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,176 @@
+.container {
+display: flex;
+flex-direction: column;
+align-items: center;
+border: solid 1px black;
+height: 400px;
+width: 50vw;
+background-color: #f9f9f9;
+margin: 10px;
+}
 
+.header {
+display: flex;
+justify-content: center;
+margin-top: 25px;
+width: 50vw;
+height: 200px;
+
+}
+
+.icon {
+height: 100px;
+width: 100px;
+}
+
+.main {
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+height: 180px;
+width: 500px;
+}
+
+.mainTop {
+display: flex;
+justify-content: flex-start;
+width: 400px;
+height: 40px;
+}
+
+.instagram {
+margin-top: 15px;
+width: 100px;
+font-size: 20px;
+}
+
+.checkMark {
+width: 100px;
+margin-left: -15px;
+margin-top: 20px;
+}
+.follow {
+width: 100px;
+margin-top: 15px;
+margin-left: -45px;
+font-weight: bold;
+}
+
+.dots {
+width: 100px;
+margin-top: 15px;
+}
+
+.mainBottom {
+display: flex;
+justify-content: flex-end;
+width: 400px;
+height: 30px;
+margin-top: 10px;
+}
+
+.posts {
+display: flex;
+width: 16vw;
+}
+
+.followers {
+display: flex;
+margin-left: -15px;
+width: 16vw;
+}
+
+.following {
+display: flex;
+width: 16vw;
+}
+
+.mainTweet {
+display: flex;
+flex-direction: column;
+width: 400px;
+height: 80px;
+}
+
+.insta {
+margin-top: 10px;
+font-weight: bold;
+}
+
+.followedBy {
+margin-top: 10px;
+font-size: 10px;
+color: gray;
+}
+
+.footer {
+display: flex;
+flex-wrap: nowrap;
+align-items: center;
+width: 50vw;
+height: 200px
+}
+
+.talent {
+height: 150px;
+width: 150px;
+}
+
+.talentTitle {
+margin-left: 30px;
+}
+
+.travel {
+height: 150px;
+width: 150px;
+}
+
+.travelTitle {
+margin-left: 30px;
+}
+
+.beauty {
+height: 150px;
+width: 150px;
+}
+
+.beautyTitle {
+margin-left: 30px;
+}
+
+.fluff {
+height: 150px;
+width: 150px;
+}
+
+.fluffTitle {
+margin-left: 35px;
+}
+
+.ASMR {
+height: 150px;
+width: 150px;
+}
+
+.asmrTitle {
+margin-left: 30px;
+}
+
+.sports {
+height: 150px;
+width: 150px;
+}
+
+.sportsTitle {
+margin-left: 30px;
+}
+
+.art {
+height: 150px;
+width: 150px;
+}
+
+.artTitle {
+margin-left: 40px;
+}
