--- a/styles.css
+++ b/styles.css
@@ -98,6 +98,29 @@ margin-top: 10px;
 font-weight: bold;
 }
 
+.tweet {
+display: flex;    
+}
+
+.heart {
+animation: icon-pulse 0.9s infinite ease-out;
+}
+
+@keyframes icon-pulse {
+    0% {
+      transform: scale(0);
+    }
+    50% {
+      transform: scale(1.2);
+    }
+    70% {
+      transform: scale(0.65);
+    }
+    100% {
+      transform: scale(0);
+    }
+  }
+
 .followedBy {
 margin-top: 10px;
 font-size: 10px;
